--- a/ex37/ex37.md
+++ b/ex37/ex37.md
@@ -31,3 +31,82 @@
   * __for__ - for is a loop keyword
   * __lambda__
   * __try__
+
+
+# Data Types
+
+  * True - True is a boolean type representing logical truth
+  * False - False is a boolean type representing logical falsehood
+  * None - None is a type that represents absence if you reference a variable that hasn't been initialized you get None
+  * strings - 'cat' 'fish' 'bird'
+  * numbers - 8 10 23553 -1233 0
+  * floats - 8.1 10.3 22.34 -334.3 0.9
+  * lists - ['mom', 'dad', 'sister', 'aunt', 'uncle']
+
+
+# Escape Sequences
+
+  * \\ - Prints a literal \
+  * \' - Prints a ' when nested inside a single quoted string
+  * \" - Prints a " when nested inside a double quoted string
+  * \a - Prints an "audible beep".  This escape sequence actually makes a sound.
+  * \b - Prints a backspace character
+  * \f - Prints a Form Feed character
+  * \n - Prints a New Line character
+  * \r - Prints a Carrige Return character
+  * \t - Prints a Horizontal Tab character
+  * \v - Prints a Vertical Tab character
+
+
+# String Formats
+
+  * %d - Prints the value as a decimal
+  * %i - Prints the value as an integer
+  * %o - Prints the value in Octal (base 8) Format
+  * %u - Prints the value as an Unsigned Integer
+  * %x - Prints the value in Hexidecimal (base 16) Format
+  * %X - Prints the value in Hexidecimal (base 16) Format
+  * %e - Prints the value in Scientific Notation with a little e
+  * %E - Prints the value in Scientific Notation with a big E
+  * %f - Prints the value as a float
+  * %F - Prints the value as a float
+  * %g - Prints the value as a float without extra zeroes
+  * %G - Prints the value as a float without extra zeroes
+  * %c - Converts the value to a character code and prints the character
+  * %r - Prints the value "as-is"
+  * %s - Prints the value as a string
+  * %% - Prints a literal % (this is an escape sequence)
+
+
+# Operators
+
+  * + - addition
+  * - - subtraction
+  * \* - multiplication
+  * \*\* - exponentiation
+  * / - division
+  * // - Floor division (divide and round down)
+  * % - Modulus (divides and returns remainder)
+  * < - less than
+  * > - greater than
+  * <= - less than or equal to
+  * >= - greater than or equal to
+  * == - equal to
+  * != - not equal to
+  * <> - not equal to
+  * ( ) - used for function arguments and operation precidence
+  * [ ] - Indicative of a list, either indexing or creating
+  * { } - Used to create a dict
+  * @ - Indicates a decorator
+  * , - Used to separate arguments to a function or items in a list or dict
+  * : - Used to indicate the start of a function or control block
+  * . - Indicates a function (method) call
+  * = - assignment
+  * ; - Indicates statement termination
+  * += - Add and assign
+  * -= - Subtract and assign
+  * *= - Multiply and assign
+  * /= - Divide and assign
+  * //= - Floor division and assignment
+  * %= - Modulus division and assignment
+  * **= - Exponentiation and assignment
